# rife-ncnn-vulkan

./: shell.nix
src/: CMakeLists.txt  main.cpp  rife.cpp  rife.h
